objects/WT_Opportunity_Stage_Tracking__c.object
<CustomObject>
    <fields>
        <fullName>WT_Date_Completed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>WT_Date_Started__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Started</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>WT_Modified_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Modified User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunity_Stage_Trackings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WT_New_Stage__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>New Stage</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Stage Trackings</relationshipLabel>
        <relationshipName>Opportunity_Stage_Trackings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>WT_Previous_Stage__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Previous Stage</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Stage_Duration_in_Minutes__c</fullName>
        <formula>( WT_Date_Completed__c- WT_Date_Started__c) * 1440</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stage Duration(in Minutes)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Opportunity Stage Tracking</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Opportunity Stage Tracking Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Stage Trackings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>